--- a/OnlineShop/app/src/main/res/menu/settings_menu.xml
+++ b/OnlineShop/app/src/main/res/menu/settings_menu.xml
@@ -16,6 +16,10 @@
                         <item android:id="@+id/cart"
                             android:title="Cart"
                             app:showAsAction="never"/>
+
+                        <item android:id="@+id/sensors"
+                            android:title="Sensors"
+                            app:showAsAction="never"/>
                 </menu>
 
         </item>
